force-app/main/default/objects/Krow__Project_Resource_Skill__c/Krow__Project_Resource_Skill__c.object-meta.xml
<CustomObject>
    <label>Project Resource Skill</label>
    <nameField>
        <displayFormat>SK{000000}</displayFormat>
        <label>Project Resource Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resource Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>