force-app/main/default/objects/Krow__Project_Resource_Skill__c/fields/Krow__Proficiency_Rating__c.field-meta.xml
<CustomField>
    <fullName>Krow__Proficiency_Rating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proficiency Rating</label>
    <referenceTo>Krow__Proficiency_Rating__c</referenceTo>
    <relationshipLabel>Project Resource Skills</relationshipLabel>
    <relationshipName>Project_Resource_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>