force-app/main/default/objects/Krow__Project_Resource_Skill__c/fields/Krow__Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Resource__c</fullName>
    <label>Project Resource</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipLabel>Project Resource Skills</relationshipLabel>
    <relationshipName>Project_Resource_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>