force-app/main/default/objects/Krow__Project_Resource_Skill__c/fields/Krow__Project_Skill__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Skill</label>
    <referenceTo>Krow__Resource_Skills__c</referenceTo>
    <relationshipLabel>Project Resource Skills</relationshipLabel>
    <relationshipName>Project_Resource_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>